--- a/README.ipynb
+++ b/README.ipynb
@@ -821,7 +821,7 @@
    "source": [
     "### |error| as a function of price\n",
     "\n",
-    "I'm surprised to see there doesn't seem to be a significant slope here, thus the error actually does not seem to be related to the price. "
+    "I'm surprised to see there doesn't seem to be a significant slope here. The error actually does not seem to be related to the price. "
    ]
   },
   {
@@ -861,7 +861,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Just to double check, we'll take a look at the absolute % errors as a function of the price. Again it seems to be the case that the relative error is much higher on low prices homes, consistent with a $standard error that is unaffected by price."
+    "Just to double check, we'll take a look at the absolute % errors as a function of the price. Again it seems to be the case that the relative error is much higher on low priced homes, consistent with a $standard error that is unaffected by price."
    ]
   },
   {
